Modernize the code with static analysis